recursion.cons.lessons.recursion.cons.Min.scala.error
min:6: error: ';' expected but '=' found.
      (list.head)=x
                 ^